Improve code description

--- a/notebooks/collab/U-Net-fastai.ipynb
+++ b/notebooks/collab/U-Net-fastai.ipynb
@@ -129,11 +129,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Imports"
+   ]
   },
   {
    "cell_type": "code",
